samples/_failures_safe/1761180373_4a162b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2298b74e.c:96: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_2298b74e.c:27:28: note: to match this ‘{’
   27 | Transition transitions[] = {
      |                            ^
